--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
     "name": "atlantabot",
     "version": "4.6.4",
     "description": "A very complete Discord bot (more than 70 commands) that uses the Discordjs API!",
-    "main": "atlanta.js",
-    "scripts": {
-        "test": "node atlanta.js",
-        "format": "prettier --tab-width 4 --write *.js src/**/*.js src/**/**/*.js src/*.js"
-    },
+     "main": "atlanta.js",
+     "scripts": {
+     "start": "node ."
+  },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Androz2091/AtlantaBot.git"
@@ -59,6 +58,8 @@
         "ytdl-core": "^1.0.6"
     },
     "devDependencies": {
-        "debugging-timer": "^1.0.0"
-    }
+        "debugging-timer": "^1.0.0",
+  "engines": {
+    "node": "12.x"
+  }
 }
